# ChangeLog for gnustep-libs/cddb
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/gnustep-libs/cvs-repo/gentoo-x86/gnustep-libs/cddb/ChangeLog,v 1.1 2008/11/03 12:08:43 voyageur Exp $

*cddb-0.2 (03 Nov 2008)

  03 Nov 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +files/cddb-0.2-gnustep-make-2.patch, +metadata.xml, +cddb-0.2.ebuild:
  Initial commit, from gnustep overlay
