@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX cddb-0.2-gnustep-make-2.patch 402 RMD160 065ad9df7da527362c7ef6b6cbc083a36e5b7608 SHA1 9f181a7ea227fbcaef3c7e16550c7ecc5960efe0 SHA256 aa068ca53dc7a5ceaca028e10e33f9b98bae1ffd73d419ddf6c463dbbcb81e22
 DIST cddb.bundle-0.2.tar.gz 16936 RMD160 2de6c627b64dd644ba7612159b86fae83a79e6df SHA1 d1401dd70587ff0cdebe88098dd38eb3bd218e29 SHA256 35801712b61d39d76a044cbcc30c727a31b3cffc0a3531b8a69e130bc07a051e
-EBUILD cddb-0.2.ebuild 552 RMD160 bf774946f4e225efc9ade22177cb26f927820470 SHA1 3972ea6f381488e410119f994fe7d5db8fe58710 SHA256 78debd2ada0ca8ac36699f77501ad68a1b3efcb0135405acc04e5dac4131d416
-MISC ChangeLog 402 RMD160 4e7c4855a04629113dd4c452067f68c2c71f549a SHA1 c646d17de85c08a7534fb7133a1ef9cf048e8185 SHA256 a04f600075d31b748667c8446f7c56a9276b05f27745d9296e63874eb3f089c2
+EBUILD cddb-0.2.ebuild 550 RMD160 d06292a768c807f8f513c51a4b941d0be5ac499b SHA1 bcd86ff55966b89ea05524e622b8ee97a4a70189 SHA256 d1b87606b262a26c264671b7c7efade18083e3c2c7d22094a4e58c71a099f6b8
+MISC ChangeLog 505 RMD160 281104da9595b2f5c16a137cfdb8b7f31945fb47 SHA1 f843fe5c961bdf31f0a693c18f27e0d643e97291 SHA256 721a839af4298e9b6cd316cb1389f0a884ccee863f4cf484ffb3229a6594b84d
 MISC metadata.xml 227 RMD160 baab4b9b2cace229b130c5b3ace12c3b9f9598e8 SHA1 19518061de03d505e5332be80e20f7695e84eb9a SHA256 614ba9ec6a6d96730b450041400d6e6bd0067e0d59e7c85a148ed6d02b76d0c5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk2RpKQACgkQmWq1bYTyC0N0QwD9GioL7bzUnRyOvS5geAFqiTw3
+eRubzEYb5IsKooVqRfoA/1IDAmR81W6Qvci9pcQKvwViy//MtvaYS9nS48ubESMu
+=2Y7R
+-----END PGP SIGNATURE-----
