@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnustep-libs/cvs-repo/gentoo-x86/gnustep-libs/cddb/cddb-0.2.ebuild,v 1.1 2008/11/03 12:08:43 voyageur Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnustep-libs/cvs-repo/gentoo-x86/gnustep-libs/cddb/cddb-0.2.ebuild,v 1.2 2011/03/29 09:21:34 angelos Exp $
 
 inherit gnustep-2
 
@@ -10,7 +10,7 @@ DESCRIPTION="GNUstep bundle for cddb acces"
 HOMEPAGE="http://gsburn.sf.net"
 SRC_URI="mirror://sourceforge/gsburn/${PN}.bundle-${PV}.tar.gz"
 
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 ~x86"
 LICENSE="GPL-2"
 SLOT="0"
 IUSE=""
